# BonsAI

./: .bonsai  .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/reconnaissance/: agent.py  models.py
bonsai/: __init__.py  __main__.py
bonsai/cli/: display.py  init_command.py  multi_command.py  report_command.py  run_command.py  status_command.py
bonsai/observability/: dashboard.py  report.py  store.py
core/executor/: api.py  base.py  claude_code.py  models.py
core/invariants/: invariants.py
core/lifecycle/: lifecycle.py
core/orchestrator/: models.py  node.py  orchestrator.py
core/seed/: seed.py
root_manager/: __init__.py  manager.py  models.py  reader.py  writer.py
roots/: ROOT.md
roots/agents/: .claude_unverified_agent.md  agents_unverified_agent.md  architect.md  bonsai_unverified_agent.md  builder.md  core_unverified_agent.md  evaluator.md  index.md  quality.md  root_manager_unverified_agent.md  roots_unverified_agent.md  tester.md
roots/context/: codebase.md  dependencies.md  failures.md  index.md  patterns.md
roots/flows/: brownfield_onboarding.md  greenfield_init.md  index.md
roots/project/: decisions.md  index.md  state.md  vision.md
roots/quality/: debt.md  index.md  patterns.md  pruning_log.md  repetition.md
roots/runs/: 0ad6ef37-7dce-4ae9-9837-369029719470.json  15926727-f36c-4f4b-8de8-88121e9e1883.json  index.md
tests/: test_cli.py  test_executor.py  test_observability.py  test_reconnaissance.py  test_root_manager.py
