[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bonsaif"
version = "0.1.0"
description = "An adaptive agent orchestration framework inspired by tree growth. Structure emerges from the problem, not the other way around."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "BonsAI Contributors"}
]
keywords = [
    "agents",
    "orchestration",
    "llm",
    "claude",
    "ai",
    "automation",
    "framework"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
api = ["anthropic>=0.20.0"]
dev = [
    "anthropic>=0.20.0",
]

[project.scripts]
bonsai = "bonsai.__main__:main"

[project.urls]
Homepage = "https://github.com/ejharv/BonsAI"
Repository = "https://github.com/ejharv/BonsAI"
Issues = "https://github.com/ejharv/BonsAI/issues"

[tool.hatch.build.targets.wheel]
packages = [
    "bonsai",
    "core",
    "root_manager",
    "agents",
]
